finished the terminal part!

--- a/assignment_1_calculator/BE/Dockerfile
+++ b/assignment_1_calculator/BE/Dockerfile
@@ -1,3 +1,7 @@
 FROM python:3.12-alpine
-COPY my-print.py /
-CMD python my-print.py
+COPY . .
+RUN pip install -r requirements.txt
+# COPY calculator_helper.py /
+# COPY calculator_rest_service.py /
+#CMD python calculator.py
+ENTRYPOINT [ "python", "calculator.py" ]
