--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -26,11 +26,14 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Pipeline-update
+        run: echo Hello, World. How is it going.
+      # 
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Pipeline-update
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          docker build -t ana-gheorghiu-calculator ,
+          docker login -u DevOpsToken -p ${{ DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io,
+          docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator 
+          docker push judevops.azurecr.io/ana-gheorghiu-calculator .
