--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Pipeline-update
+      - name: One-Line
         run: echo Hello, World. How is it going.
       # 
 
