--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -34,6 +34,6 @@ jobs:
       - name: Pipeline-update
         run: |
           docker build -t ana-gheorghiu-calculator ,
-          docker login -u DevOpsToken -p ${{ DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io,
+          docker login -u DevOpsToken -p aK17fIj/Bvc57HBJRFlD9rkcU3Un4OaKx7vE3CIDwI+ACRDSd20S judevops.azurecr.io,
           docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator 
           docker push judevops.azurecr.io/ana-gheorghiu-calculator .
