--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -28,8 +28,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Pipeline-update
         run: |
-          # docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io,
-          docker build -t ana-gheorghiu-calculator ,
-          docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator 
-          docker push judevops.azurecr.io/ana-gheorghiu-calculator 
-          docker logout.
+          # docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io .,
+          docker build -t ana-gheorghiu-calculator .,
+          docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator .,
+          docker push judevops.azurecr.io/ana-gheorghiu-calculator .
+          docker logout .
