--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -24,12 +24,14 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-
+           - name: Login
+             run:  
+            docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io
       # Runs a set of commands using the runners shell
-      - name: Pipeline-update
-        run: |
-          # docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io .,
-          docker build -t ana-gheorghiu-calculator .,
-          docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator .,
-          docker push judevops.azurecr.io/ana-gheorghiu-calculator .
-          docker logout .
+      # -   name: Pipeline-update
+      #     run: |
+      #       
+      #       docker build -t ana-gheorghiu-calculator ,
+      #       docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator ,
+      #       docker push judevops.azurecr.io/ana-gheorghiu-calculator 
+      #       docker logout 
