--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -29,7 +29,9 @@ jobs:
       - name: Login-Docker
         run: docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io 
       - name: Build-Docker
-        run:  docker build -t judevops.azurecr.io/ana-gheorghiu-calculator
+        run:   docker build -t ana-gheorghiu-calculator
+      - name: -Docker-registry
+        run:   docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator 
       - name: -Docker-push
         run:  docker push judevops.azurecr.io/ana-gheorghiu-calculator 
       - name: -Docker-logout
