--- a/assignment_1_calculator/BE/Dockerfile
+++ b/assignment_1_calculator/BE/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.12-alpine
 COPY . .
-RUN pip install -r BE/requirements.txt
+RUN pip install -r requirements.txt
 # COPY calculator_helper.py /
 # COPY calculator_rest_service.py /
 #CMD python calculator.py
