--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Login-Docker
         run: docker login -u DevOpsToken -p ${{ secrets.DOCKER_PASSWORD_REGISTRY }} judevops.azurecr.io 
       - name: Build-Docker
-        run:   docker build -t ana-gheorghiu-calculator assignment_1_calculator
+        run:   docker build -t ana-gheorghiu-calculator assignment_1_calculator/BE
       - name: -Docker-registry
         run:   docker tag ana-gheorghiu-calculator  judevops.azurecr.io/ana-gheorghiu-calculator 
       - name: -Docker-push
