--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -13,6 +13,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -32,9 +34,17 @@ jobs:
           registry: judevops.azurecr.io
           username: DevOpsToken
           password: ${{ secrets.DOCKER_PASSWORD_REGISTRY }}
+   
+   # Runs the pytest
+      -   name: Testing the code - unit and api
+          run: |
+            python BE/calculator.py --rest &
+            pytest
+            pytest --junit-xml=report.xml.
 
       # Runs a set of commands using the runners shell
       -   name: Pipeline-update
+          if: success()
           run: |
             docker build -t judevops.azurecr.io/ana-gheorghiu-calculator ./assignment_1_calculator/BE
             docker push judevops.azurecr.io/ana-gheorghiu-calculator
