--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -35,10 +35,17 @@ jobs:
           username: DevOpsToken
           password: ${{ secrets.DOCKER_PASSWORD_REGISTRY }}
    
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+          pip install requests 
+          
    # Runs the pytest
       -   name: Testing the code - unit and api
           run: |
-            python BE/calculator.py --rest &
+            python BE/calculator.py --rest &.
             pytest
             pytest --junit-xml=report.xml.
 
