--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -44,9 +44,10 @@ jobs:
    # Runs the pytest
       -   name: Testing the code - unit and api
           run: |
-            python BE/calculator.py --rest &.
+            python BE/calculator.py --rest &
             pytest
             pytest --junit-xml=report.xml.
+            pkill -f 'BE/calculator.py --rest'
 
       # Runs a set of commands using the runners shell
       -   name: Pipeline-update
