--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -40,15 +40,14 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install requests 
-    
-      - name: Set PythonPath
-        env: 
-           PYTHONPATH:${{ github.workspace }}/assignment_1_calculator
-         
-          
+
+      - name: updating PYTHONPATH
+        run: echo "PYTHONPATH=assignment_1_calculator" >> $GITHUB_ENV
+        shell: bash
    # Runs the pytest
       -   name: Testing the code - unit and api
           run: |
+            echo %PYTHONPATH%
             python calculator.py --rest &
             pytest
             pytest --junit-xml=report.xml.
