--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -53,15 +53,17 @@ jobs:
             echo %PYTHONPATH%
             python assignment_1_calculator/BE/calculator.py --rest &
             pytest
-      -   name: Publish Test Report
-          uses: mikepenz/action-junit-report@v5
-          with:
-                report_paths: '**/build/test-results/test/TEST-*.xml'
-      -   name: Killing the server
-          run: |
-            echo %PYTHONPATH%
             pytest --junit-xml=report.xml.
             pkill -f 'calculator.py --rest'
+      # -   name: Publish Test Report
+      #     uses: mikepenz/action-junit-report@v5
+      #     with:
+      #           report_paths: '**/build/test-results/test/TEST-*.xml'
+      # -   name: Killing the server
+      #     run: |
+      #       echo %PYTHONPATH%
+      #       pytest --junit-xml=report.xml.
+      #       pkill -f 'calculator.py --rest'
      
       # Runs a set of commands using the runners shell
       -   name: Pipeline-update
