--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -43,6 +43,8 @@ jobs:
           pip install requests
           pip install assertpy
           pip install httpx
+          pip install playwright
+          playwright install
 
       - name: updating PYTHONPATH
         run: echo "PYTHONPATH=assignment_1_calculator" >> $GITHUB_ENV
