--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -53,13 +53,14 @@ jobs:
       -   name: Testing the code - unit and api
           run: |
             echo %PYTHONPATH%
-            python assignment_1_calculator/BE/calculator.py --rest &
+            docker compose -p webcalculator up -d
             pytest
             pytest --junit-xml=report.xml
       -   name: Publish Test Report
           uses: mikepenz/action-junit-report@v5
           with:
                 report_paths: 'report.xml'
+   # python assignment_1_calculator/BE/calculator.py --rest &
       # -   name: Killing the server
       #     run: |
       #       echo %PYTHONPATH%
