--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -54,13 +54,14 @@ jobs:
           run: |
             echo %PYTHONPATH%
             docker compose -p webcalculator up -d
+            python assignment_1_calculator/BE/calculator.py --rest &
             pytest
             pytest --junit-xml=report.xml
       -   name: Publish Test Report
           uses: mikepenz/action-junit-report@v5
           with:
                 report_paths: 'report.xml'
-   # python assignment_1_calculator/BE/calculator.py --rest &
+
       # -   name: Killing the server
       #     run: |
       #       echo %PYTHONPATH%
