--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -52,7 +52,7 @@ jobs:
    # Runs the pytest
       -   name: Testing the code - unit and api
           run: |
-            echo %PYTHONPATH%
+            echo $PYTHONPATH
             docker compose -p webcalculator up -d
             pytest
             pytest --junit-xml=report.xml
