--- a/.github/workflows/calculator_pipeline.yml
+++ b/.github/workflows/calculator_pipeline.yml
@@ -53,7 +53,7 @@ jobs:
       -   name: Testing the code - unit and api
           run: |
             echo $PYTHONPATH
-            docker compose -p webcalculator up -d assignment_1_calculator/
+            docker compose -p webcalculator up -d assignment_1_calculator/docker-compose.yml
             pytest
             pytest --junit-xml=report.xml
       -   name: Publish Test Report
